--- a/index.html
+++ b/index.html
@@ -100,11 +100,13 @@
 
             <h2>About Me</h2>
 
-            <p class="justify-txt">A 28 years old Cloud Enthusiast, working in the consulting industry and adopting
+            <p class="justify-txt">A 29 years old Cloud Enthusiast, working in the information technology industry and
+               adopting
                modern cloud
                technologies with over 3 years professional experience. Advocate of Agile Methodologies, Antonis uses his
                knowledge, experience and creativity to help deliver innovative solutions. He loves coding, designing
-               architectures, building great products and helping businesses to succeed with their goals. A strong
+               architectures, automating activities, building great products and helping businesses to succeed with
+               their goals. A strong
                believer in the power of positive thinking, Antonis enjoys communicating about the latest technologies
                and trends, while working in multidisciplinary teams. Antonis loves a good Netflix binge, but can also be
                found on a basketball court dribbling. His dream is to travel all around the world with the company of
@@ -180,17 +182,19 @@
                <div class="twelve columns justify-txt">
 
                   <h3>Deloitte - Thessaloniki, Creece</h3>
-                  <p class="info">Consultant - Cloud Engineer <br> <em class="date">Jan 2019 - Present</em></p>
+                  <p class="info">Consultant Cloud Engineer <br> <em class="date">Jan 2019 - Present</em></p>
 
                   <p>
-                     Improving <span class="bold-text">AWS</span> skills, exploring other cloud offerings
-                     (<span class="bold-text">GCP</span>,
-                     <span class="bold-text">Azure</span>, <span class="bold-text">Kubernetes</span>), while
-                     getting familiar with integration platforms (<span class="bold-text">TIBCO</span>, <span
+                     Improved cloud development skills on <span class="bold-text">AWS</span>, explored other cloud
+                     offerings such as
+                     <span class="bold-text">GCP</span>,
+                     <span class="bold-text">Azure</span> and <span class="bold-text">Kubernetes</span>, while
+                     got familiar with integration platforms (<span class="bold-text">TIBCO</span>, <span
                         class="bold-text">MuleSoft</span>, <span class="bold-text">Dell Boomi</span>) and
                      CRM
-                     softwares (<span class="bold-text">Salesforce</span>, <span class="bold-text">SAP</span>). Rceived
-                     three more certifications.
+                     software (<span class="bold-text">Salesforce</span>, <span class="bold-text">SAP</span>). Worked
+                     for multinational customers in health care, education, electricity and e-commerce industries, in
+                     addition helped on migration of critical systems on cloud.
                      <li>Development of Full Stack web portal based on <span class="bold-text">Azure</span>
                         with
                         <span class="bold-text">Angular</span>, <span class="bold-text">Express</span>
@@ -217,15 +221,13 @@
                         <span class="bold-text">PostegreSQL</span>.
                      </li>
                      <br>
-                     <span class="bold-text">Tech Stack:</span> AWS (S3, DynamoDB, API Gateway, Cognito,
-                     Lambda, RDS, EC2, VPC, Cloudfront, Codecommit, Cloudwatch, Route 53, SNS, SQS),
-                     GCP (GCE, App Engine, Cloud Functions, GKE, Cloud Storage, BigQuery, Cloud SQL, Cloud
-                     Bigtable, VPC, BigQuery, Stackdriver),
-                     Microsoft Azure (AD, Azure DevOps, AKS), JavaScript, Angular, PHP, Nodejs,
-                     Serverless framerwork, Express framework, PostegreSQL, MariaDB, Microsoft SQL
-                     Server, TypeORM, Kubernetes, Docker,
+                     <span class="bold-text">Tech Stack:</span> AWS,
+                     GCP,
+                     Microsoft Azure, JavaScript, Angular, PHP, Nodejs,
+                     Serverless framerwork, Express framework, MySQL, PostegreSQL, MariaDB, Microsoft SQL
+                     Server, TypeORM, Sequelize, Passportjs, Kubernetes, Docker, Jenkins
                      WordPress, XML, Material, SOAP, ZUORA, SAP, Salesforce, TIBCO, MuleSoft, Dell
-                     Boomi.
+                     Boomi, Git.
                   </p>
 
                </div>
@@ -237,13 +239,14 @@
                <div class="twelve columns justify-txt">
 
                   <h3>Deloitte - Thessaloniki, Creece</h3>
-                  <p class="info">Junior Consultant - Cloud Engineer <br> <em class="date">Jan 2018 - Jan 2019</em></p>
+                  <p class="info">Junior Consultant Cloud Engineer <br> <em class="date">Jan 2018 - Jan 2019</em></p>
 
                   <p>
-                     Working on of one the biggest consulting companies in the field, introduced to the cloud
-                     technologies and serverless architectures. Gained new skills and experience mainly with
-                     AWS,
-                     while received two certifications.
+                     Started my consulting journey, while working on one of the biggest consulting companies in the
+                     field. Introduced to the cloud technologies, serverless architectures, complex infrastructures,
+                     gained hands-on experience
+                     on <span class="bold-text">AWS</span> and involved in the development of several commercial cloud
+                     native applications.
                      <li>
                         Development of Full Stack web application based on <span class="bold-text">AWS</span>
                         with <span class="bold-text">Angular</span>, serverless Backend
@@ -261,14 +264,12 @@
                      <li>Integration of <span class="bold-text">Oracle DB</span> using <span
                            class="bold-text">ODI</span>.</li>
                      <br>
-                     <span class="bold-text">Tech Stack:</span> AWS (S3, DynamoDB, API Gateway, Cognito,
-                     Elasticsearch, Lambda, RDS, EC2, VPC,
-                     Cloudfront, Codecommit, CodePipeline, Cloudformation, Cloudwatch, Route 53),
+                     <span class="bold-text">Tech Stack:</span> AWS,
                      JavaScript, Angular,
                      Nodejs,
                      Serverless framerwork, Java, Apache Maven, MySQL, Oracle DB, ODI, Jenkins, Docker,
                      AEM, JSON, YAML,
-                     Bootstrap, Material.
+                     Bootstrap, Material, Git.
                   </p>
 
                </div>
@@ -280,7 +281,8 @@
                <div class="twelve columns justify-txt">
 
                   <h3>Hellenic Army, Greece</h3>
-                  <p class="info">IT Support <br> <em class="date">Sep 2016 - Jun 2017</em></p>
+                  <p class="info">Information Technology Support Engineer<br> <em class="date">Sep 2016 - Jun 2017</em>
+                  </p>
 
                   <p>
                      Providing support on the Military Systems and Networks of the Hellenic Army through a military
@@ -521,6 +523,9 @@
                Kubernetes
             </div>
             <div class="chip" style="cursor: pointer;">
+               Terraform
+            </div>
+            <div class="chip" style="cursor: pointer;">
                MuleSoft
             </div>
             <div class="chip" style="cursor: pointer;">
@@ -573,6 +578,9 @@
             </div>
             <div class="chip" style="cursor: pointer;">
                TypeORM
+            </div>
+            <div class="chip" style="cursor: pointer;">
+               Sequelize
             </div>
 
          </div> <!-- main-col end -->
