updated work experience, skils and certifications

--- a/index.html
+++ b/index.html
@@ -181,8 +181,30 @@
 
                <div class="twelve columns justify-txt">
 
+                  <h3>Citrix - Creece</h3>
+                  <p class="info">Cloud Platform Engineer<br> <em class="date">Nov 2020 - Present</em></p>
+
+                  <p>
+                     Managing , developing and automating multi-tenanted SaaS applications. Providing hands-on
+                     technical expertise to design, deploy, secure and optimize cloud services. Responsible
+                     for the security, availability, performance, compliance and cost of Citrix cloud
+                     services.
+                     <br>
+                     <br>
+                     <span class="bold-text">Tech Stack:</span> AWS,
+                     GCP, Microsoft Azure, Terraform, Ansible, Kubernetes, Docker, Jenkins, Git.
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns justify-txt">
+
                   <h3>Deloitte - Thessaloniki, Creece</h3>
-                  <p class="info">Consultant Cloud Engineer <br> <em class="date">Jan 2019 - Present</em></p>
+                  <p class="info">Cloud Engineer Consultant<br> <em class="date">Jan 2019 - Oct 2020</em></p>
 
                   <p>
                      Improved cloud development skills on <span class="bold-text">AWS</span>, explored other cloud
@@ -194,7 +216,7 @@
                      CRM
                      software (<span class="bold-text">Salesforce</span>, <span class="bold-text">SAP</span>). Worked
                      for multinational customers in health care, education, electricity and e-commerce industries, in
-                     addition helped on migration of critical systems on cloud.
+                     addition helped on the migration of critical systems on cloud.
                      <li>Development of Full Stack web portal based on <span class="bold-text">Azure</span>
                         with
                         <span class="bold-text">Angular</span>, <span class="bold-text">Express</span>
@@ -239,7 +261,7 @@
                <div class="twelve columns justify-txt">
 
                   <h3>Deloitte - Thessaloniki, Creece</h3>
-                  <p class="info">Junior Consultant Cloud Engineer <br> <em class="date">Jan 2018 - Jan 2019</em></p>
+                  <p class="info">Junior Cloud Engineer Consultant<br> <em class="date">Jan 2018 - Jan 2019</em></p>
 
                   <p>
                      Started my consulting journey, while working on one of the biggest consulting companies in the
@@ -280,26 +302,9 @@
 
                <div class="twelve columns justify-txt">
 
-                  <h3>Hellenic Army, Greece</h3>
-                  <p class="info">Information Technology Support Engineer<br> <em class="date">Sep 2016 - Jun 2017</em>
-                  </p>
-
-                  <p>
-                     Providing support on the Military Systems and Networks of the Hellenic Army through a military
-                     disciplined and formal environment.
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns justify-txt">
-
                   <h3>University of Thessaly - Volos, Creece
                   </h3>
-                  <p class="info">Assistant Lecturer <br> <em class="date">Sep 2015 - Jan 2016</em></p>
+                  <p class="info">Assistant Lecturer<br> <em class="date">Sep 2015 - Jan 2016</em></p>
 
                   <p>
                      Assisting the teaching of <span class="bold-text">“Software Design & Development”</span>
@@ -324,7 +329,7 @@
 
                   <h3>Frenzy Projects - Volos, Creece
                   </h3>
-                  <p class="info">Web Developer <br> <em class="date">Jun 2014 - Aug 2014</em></p>
+                  <p class="info">Web Developer<br> <em class="date">Jun 2014 - Aug 2014</em></p>
 
                   <p>
                      Development of the agency’s websites in <span class="bold-text">WordPress</span>,
@@ -582,6 +587,12 @@
             <div class="chip" style="cursor: pointer;">
                Sequelize
             </div>
+            <div class="chip" style="cursor: pointer;">
+               Ansible
+            </div>
+            <div class="chip" style="cursor: pointer;">
+               Jenkins
+            </div>
 
          </div> <!-- main-col end -->
 
@@ -697,6 +708,19 @@
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
+                     <img alt="" src="images/portfolio/terraform.png">
+                     <div class="overlay">
+                        <div class="portfolio-item-meta">
+                           <h5>Terraform</h5>
+                           <p>Certified Associate</p>
+                        </div>
+                     </div>
+                     <!-- <div class="link-icon"><i class="icon-plus"></i></div> -->
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
                      <img alt="" src="images/portfolio/azure.png">
                      <div class="overlay">
                         <div class="portfolio-item-meta">
@@ -715,6 +739,51 @@
                         <div class="portfolio-item-meta">
                            <h5>Kubernetes</h5>
                            <p>Kubernetes Deep Dive - A Cloud Guru</p>
+                           <br>
+                           <p>Kubernetes for the Absolute Beginners - Hands-on - KodeKloud</p>
+                        </div>
+                     </div>
+                     <!-- <div class="link-icon"><i class="icon-plus"></i></div> -->
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+                     <img alt="" src="images/portfolio/docker.png">
+                     <div class="overlay">
+                        <div class="portfolio-item-meta">
+                           <h5>Docker</h5>
+                           <p>Docker for the Absolute Beginner - Hands On - DevOps - KodeKloud</p>
+                           <br>
+                           <p>Docker - SWARM - Hands-on - DevOps</p>
+                        </div>
+                     </div>
+                     <!-- <div class="link-icon"><i class="icon-plus"></i></div> -->
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+                     <img alt="" src="images/portfolio/ansible.png">
+                     <div class="overlay">
+                        <div class="portfolio-item-meta">
+                           <h5>Ansible</h5>
+                           <p>Ansible Advanced - Hands-On - DevOps - KodeKloud</p>
+                           <br>
+                           <p>Ansible for the Absolute Beginner - Hands-On - DevOps - KodeKloud</p>
+                        </div>
+                     </div>
+                     <!-- <div class="link-icon"><i class="icon-plus"></i></div> -->
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+                     <img alt="" src="images/portfolio/jenkins.png">
+                     <div class="overlay">
+                        <div class="portfolio-item-meta">
+                           <h5>Jenkins</h5>
+                           <p>Jenkins, From Zero To Hero: Become a DevOps Jenkins Master</p>
                         </div>
                      </div>
                      <!-- <div class="link-icon"><i class="icon-plus"></i></div> -->
